Bug Fix: Video on project was not responsive

--- a/portfolio/src/components/project/project.scss
+++ b/portfolio/src/components/project/project.scss
@@ -37,3 +37,9 @@
 .project-text {
     text-align: center;
 }
+
+.video-style {
+    width: 100%;
+    height:42vh;
+    vertical-align: middle;
+}
